--- a/package.json
+++ b/package.json
@@ -1,29 +1,21 @@
 {
-  "name": "react_app",
+  "name": "CallTaxi",
   "version": "0.1.0",
   "description": "KAU project",
   "private": true,
   "dependencies": {
-    "@aws-amplify/core": "^1.0.15",
-    "@aws-amplify/ui": "^1.0.6",
-    "apollo-boost": "^0.1.16",
-    "aws-amplify": "^1.1.6",
-    "aws-amplify-react": "^2.0.7",
-    "eslint": "5.6.0",
+    "@aws-amplify/core": "^1.0.16",
+    "@aws-amplify/ui": "^1.0.7",
+    "aws-amplify": "^1.1.7",
+    "aws-amplify-react": "^2.1.1",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.1.0",
-    "eslint-plugin-prettier": "^3.0.0",
-    "global": "^4.3.2",
-    "graphql": "^14.0.2",
-    "q": "^1.5.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-google-maps": "^9.4.5",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.3",
-    "recompose": "^0.30.0",
-    "styled-components": "^3.4.9"
+    "react-scripts": "^2.0.5",
+    "recompose": "^0.30.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,9 +33,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.8.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1"
+    "prettier-eslint": "^8.8.2"
   }
 }
