--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "recompose": "^0.30.0"
   },
   "scripts": {
-    "start": "HTTPS=true react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
